fixed text-align in tao css

--- a/taoistthreads/css/tao.css
+++ b/taoistthreads/css/tao.css
@@ -51,7 +51,7 @@ h2 {
 
 p {
     margin-bottom: 1.5em;
-    text-align: justify;
+    text-align: left;
 }
 
 a {
